regression/parse_pool/progtest4.sfp.out

sfc in program parse_pool/progtest4.sfp
syntax error at line 3, position 1:
start hello
^
