regression/parse_pool/progtest4.sfp
# Testing erroneous program definition (missing closing brace)
configuration hello { test_blink() nullNet() nullMac() nullRadio()
start hello

